--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
          * SITE_NAME：站点名称
          */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: '',
+            SCF_GATEWAY: 'https://service-2z732q6c-1251140505.ap-hongkong.apigateway.myqcloud.com/release/cconedrive',
             SITE_NAME: 'FODI'
         };
     </script>
